Fixed the color of the hyperlinks in the left container

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
     text-align: center;
 }
 
-#left-container .bottom-content a:visited {
+#left-container .bottom-content a {
     color: white;
 }
 
